--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,76 @@
 <web-app id="WebApp_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>${project.name} ${env}</display-name>
 
+    <!-- JSF stuff cribbed from jboss-jsf-weld-servlet-webapp archetype -->
+
+   <!-- This is an optional parameter, but it makes troubleshooting errors much easier -->
+   <!-- You should remove this context parameter before deploying to production! -->
+   <context-param>
+      <param-name>javax.faces.PROJECT_STAGE</param-name>
+      <param-value>Development</param-value>
+   </context-param>
+
+   <context-param>
+      <param-name>org.apache.myfaces.annotation.SCAN_PACKAGES</param-name>
+      <param-value>edu.kumc.informatics.heron</param-value>
+   </context-param>
+
+   <!--
+   <context-param>
+      <param-name>com.sun.faces.expressionFactory</param-name>
+      <param-value>com.sun.el.ExpressionFactoryImpl</param-value>
+   </context-param>
+
+   <context-param>
+      <param-name>org.apache.myfaces.EXPRESSION_FACTORY</param-name>
+      <param-value>com.sun.el.ExpressionFactoryImpl</param-value>
+   </context-param>
+   -->
+
+   <!-- Activate the JSF 2.0 servlet -->
+   <servlet>
+      <servlet-name>Faces Servlet</servlet-name>
+      <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+      <load-on-startup>1</load-on-startup>
+   </servlet>
+
+   <!-- Tell the context which URLs to process with JSF -->
+   <servlet-mapping>
+      <servlet-name>Faces Servlet</servlet-name>
+      <url-pattern>*.jsf</url-pattern>
+   </servlet-mapping>
+
+   <!-- This section is optional. We are allowing index.jsf to handle the root URL (i.e., /). -->
+   <welcome-file-list>
+      <!-- Add additional files here, if desired, for example: <welcome-file>index.html</welcome-file> -->
+      <welcome-file>index.jsf</welcome-file>
+   </welcome-file-list>
+
+   <resource-env-ref>
+      <description>Object factory for the CDI Bean Manager</description>
+      <resource-env-ref-name>BeanManager</resource-env-ref-name>
+      <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+   </resource-env-ref>
+
+   <!-- Enable this security constraint if you are using *.jsf as your Faces Servlet mapping -->
+   <!--
+   <security-constraint>
+      <display-name>Restrict direct access to Facelets views</display-name>
+      <web-resource-collection>
+         <web-resource-name>Facelets views</web-resource-name>
+         <url-pattern>*.xhtml</url-pattern>
+      </web-resource-collection>
+      <auth-constraint/>
+   </security-constraint>
+   -->
+
+
+
+
+
+
+
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
