ignore integration testing config
--HG--
branch : frontiers-layout

--- a/.hgignore
+++ b/.hgignore
@@ -8,3 +8,6 @@ target
 catalog.xml
 .netbeans/
 
+# passwords and such for integration testing
+heron_wsgi/integration-test.ini
+heron_wsgi/admin_lib/integration-test.ini
