--- a/heron_wsgi/Makefile
+++ b/heron_wsgi/Makefile
@@ -7,7 +7,10 @@ SFOOD_GRAPH=sfood-graph
 # pip install coverage
 COVERAGE=coverage
 
-MODULES=checklist.py config.py db_util.py hcard_mock.py heron_policy.py medcenter.py redcap_connect.py
+MODULES=admin_lib/checklist.py admin_lib/config.py admin_lib/db_util.py \
+        admin_lib/hcard_mock.py admin_lib/heron_policy.py \
+        admin_lib/medcenter.py admin_lib/redcap_connect.py \
+        heron_srv.py cas_auth.py usrv.py
 
 view: ,deps.ps
 	$(XDG_OPEN) ,deps.ps
@@ -25,7 +28,8 @@ coverage: htmlcov/index.html
 	$(XDG_OPEN) htmlcov/index.html
 
 htmlcov/index.html: .coverage
-	$(COVERAGE) html --omit ldaplib.py,db_util.py,hcard_mock.py
+	$(COVERAGE) html \
+		--omit admin_lib/ldaplib.py,admin_lib/db_util.py,admin_lib/hcard_mock.py,tests.py,admin_lib/tests.py
 
 .coverage: tests.py $(MODULES)
 	$(COVERAGE) run --source . --branch tests.py
