allow new users to use analysis tools; i.e. include DATA_LDS (#314)
--HG--
branch : prod

--- a/src/main/filters/filter-test.properties
+++ b/src/main/filters/filter-test.properties
@@ -1,6 +1,6 @@
 # maven filter properties for integration testing on crappie
-raven_cas_service=https://crappie.kumc.edu/
-raven_url=https://crappie.kumc.edu/raven/
+raven_cas_service=https://crappie.kumc.edu/heron/
+raven_url=https://crappie.kumc.edu/heron/
 i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
 heron_project_schema=BlueHeronData
 
