--- a/apache/heron_admin.conf
+++ b/apache/heron_admin.conf
@@ -1,15 +1,19 @@
 #Apache configuration File
 
-#2. Alias/Allow apache to serve static content.
-Alias /heron_admin/av /usr/local/heron_admin/heron_wsgi/htdocs-heron/av
+#Alias/Allow apache to serve static content.
+Alias /heron_admin/av /usr/local/heron_admin/heron_wsgi/htdocs-raven/av
+<Directory /usr/local/heron_admin/heron_wsgi/htdocs-raven/av>
+Order deny,allow
+Allow from all
+</Directory>
 
 #Embeded mode (http://example.com/heron_wsgi).For big websites with a lot of memory and visitors.
-WSGIScriptAlias /heron_admin /usr/local/heron_Admin/apache/heron_wsgi.py
+WSGIScriptAlias /heron_admin /usr/local/heron_admin/apache/heron_wsgi.py
 
-#3. Test if modwsgi is working. Uncomment below line, and go to http://localhost/test:
+#Test if modwsgi is working. Uncomment below line, and go to http://localhost/test:
 WSGIScriptAlias /test /usr/local/heron_admin/apache/test.wsgi
 
-#6. Directory Permission.
+#Directory Permission.
 <Directory /usr/local/heron_admin/apache>
 Order deny,allow
 Allow from all
