--- a/development.ini
+++ b/development.ini
@@ -37,3 +37,42 @@ document_root = heron_wsgi/htdocs-heron/av/
 use = egg:Paste#http
 host = 127.0.0.1
 port = 8123
+
+# Begin logging configuration
+
+[loggers]
+keys = root, heron_wsgi, sqlalchemy
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = INFO
+handlers = console
+
+[logger_heron_wsgi]
+level = DEBUG
+handlers =
+qualname = heron_wsgi
+
+[logger_sqlalchemy]
+level = INFO
+handlers =
+qualname = sqlalchemy.engine
+# "level = INFO" logs SQL queries.
+# "level = DEBUG" logs SQL queries and results.
+# "level = WARN" logs neither.  (Recommended for production systems.)
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+# End logging configuration
