restore coverage testing to working order by excluding htdocs-heron/*
--HG--
branch : recap

--- a/heron_wsgi/Makefile
+++ b/heron_wsgi/Makefile
@@ -7,10 +7,14 @@ SFOOD_GRAPH=sfood-graph
 # pip install coverage
 COVERAGE=coverage
 
-MODULES=admin_lib/checklist.py admin_lib/config.py admin_lib/db_util.py \
-        admin_lib/hcard_mock.py admin_lib/heron_policy.py \
-        admin_lib/medcenter.py admin_lib/redcap_connect.py \
-        heron_srv.py cas_auth.py usrv.py
+MODULES=admin_lib/checklist.py genshi_render.py \
+        admin_lib/config.py admin_lib/ldaplib.py heron_srv.py \
+        admin_lib/db_util.py admin_lib/medcenter.py \
+        admin_lib/disclaimer.py admin_lib/redcap_connect.py logwatch.py \
+        admin_lib/hcard_mock.py admin_lib/sealing.py \
+        admin_lib/heron_policy.py admin_lib/tests.py \
+        admin_lib/i2b2pm.py cas_auth.py
+
 
 view: ,deps.svg
 	$(XDG_OPEN) ,deps.svg
@@ -32,7 +36,7 @@ coverage: htmlcov/index.html
 
 htmlcov/index.html: .coverage
 	$(COVERAGE) html \
-		--omit admin_lib/ldaplib.py,admin_lib/db_util.py,admin_lib/hcard_mock.py,tests.py,admin_lib/tests.py
+		--omit 'htdocs-heron/*',admin_lib/ldaplib.py,admin_lib/db_util.py,admin_lib/hcard_mock.py,tests.py,admin_lib/tests.py
 
 .coverage: tests.py $(MODULES)
 	$(COVERAGE) run --source . --branch tests.py
