--- a/apache/heron_admin.conf
+++ b/apache/heron_admin.conf
@@ -1,17 +1,20 @@
 #Apache configuration File
 
 #Alias/Allow apache to serve static content.
-Alias /heron_admin/av /usr/local/heron_admin/heron_wsgi/htdocs-raven/av
+Alias /heron/av /usr/local/heron_admin/heron_wsgi/htdocs-raven/av
 <Directory /usr/local/heron_admin/heron_wsgi/htdocs-raven/av>
 Order deny,allow
 Allow from all
 </Directory>
 
 #Embeded mode (http://example.com/heron_wsgi).For big websites with a lot of memory and visitors.
-WSGIScriptAlias /heron_admin /usr/local/heron_admin/apache/heron_wsgi.py
+WSGIScriptAlias /heron /usr/local/heron_admin/apache/heron_wsgi.py
 
 #Test if modwsgi is working. Uncomment below line, and go to http://localhost/test:
 WSGIScriptAlias /test /usr/local/heron_admin/apache/test.wsgi
+
+Redirect /heron_admin /heron/
+RedirectMatch /heron$ /heron/
 
 #Directory Permission.
 <Directory /usr/local/heron_admin/apache>
