send email on POST to /decision_notifier (#577)   - inject Mailer     - rework mail config a bit       - check in logging config that isn't working yet
  - tweak/fix notice_log schema testing issue

--- a/development.ini
+++ b/development.ini
@@ -21,6 +21,10 @@ use = egg:heron_wsgi
 webapp_ini=%(here)s/heron_wsgi/integration-test.ini
 admin_ini=%(here)s/heron_wsgi/admin_lib/integration-test.ini
 
+# cf http://docs.pylonsproject.org/projects/pyramid_mailer/dev/#configuration
+mail.host = smtp.kumc.edu
+mail.port = 25
+mail.default_sender = heron-admin@kumc.edu
 
 [app:av]
 use = egg:Paste#static
@@ -41,13 +45,13 @@ port = 8123
 # Begin logging configuration
 
 [loggers]
-keys = root, heron_wsgi, sqlalchemy
+keys = root, heron_wsgi, sqlalchemy, exc_logger
 
 [handlers]
-keys = console
+keys = console, exc_handler
 
 [formatters]
-keys = generic
+keys = generic, exc_formatter
 
 [logger_root]
 level = INFO
@@ -66,13 +70,27 @@ qualname = sqlalchemy.engine
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
 
+[logger_exc_logger]
+level = ERROR
+handlers = exc_handler
+qualname = exc_logger
+
 [handler_console]
 class = StreamHandler
 args = (sys.stderr,)
 level = NOTSET
 formatter = generic
 
+[handler_exc_handler]
+class = handlers.SMTPHandler
+args = (('localhost', 25), 'from@example.com', ['to@example.com'], 'myapp Exception')
+level = ERROR
+formatter = exc_formatter
+
 [formatter_generic]
 format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+[formatter_exc_formatter]
+format = %(asctime)s %(message)s
 
 # End logging configuration
