- work around cc bug in pyramid_mailer (#577)
- comment out production mail settings in development.ini

- oops! sponsorship query didn't distinguish between all-Yes and all-No
  - add test for the all-No case
  - use YES/NO rather than '1'/'2'
  - make comments about REDCap data dictionary expectations into tests

--- a/development.ini
+++ b/development.ini
@@ -22,9 +22,10 @@ webapp_ini=%(here)s/heron_wsgi/integration-test.ini
 admin_ini=%(here)s/heron_wsgi/admin_lib/integration-test.ini
 
 # cf http://docs.pylonsproject.org/projects/pyramid_mailer/dev/#configuration
-mail.host = smtp.kumc.edu
-mail.port = 25
-mail.default_sender = heron-admin@kumc.edu
+#mail.host = smtp.kumc.edu
+#mail.port = 25
+#mail.default_sender = heron-admin@kumc.edu
+#mail.debug = True
 
 [app:av]
 use = egg:Paste#static
