- update references to rtconfig module (#703) - fix post_record in mock web access
--HG--
branch : rtconfig

--- a/heron_wsgi/Makefile
+++ b/heron_wsgi/Makefile
@@ -8,9 +8,9 @@ SFOOD_GRAPH=sfood-graph
 COVERAGE=coverage
 
 MODULES=admin_lib/checklist.py genshi_render.py \
-        admin_lib/config.py admin_lib/ldaplib.py heron_srv.py \
-        admin_lib/db_util.py admin_lib/medcenter.py \
-        admin_lib/disclaimer.py admin_lib/redcap_connect.py logwatch.py \
+        admin_lib/rtconfig.py admin_lib/ldaplib.py heron_srv.py \
+        admin_lib/medcenter.py \
+        admin_lib/disclaimer.py admin_lib/redcap_connect.py \
         admin_lib/hcard_mock.py admin_lib/sealing.py \
         admin_lib/heron_policy.py admin_lib/tests.py \
         admin_lib/i2b2pm.py cas_auth.py
@@ -29,7 +29,7 @@ view: ,deps.svg
 	$(SFOOD_GRAPH) ,deps.txt >$@
 
 ,deps.txt: $(MODULES)
-	$(SFOOD) --internal-only $(MODULES) >$@
+	$(SFOOD) --internal-only --follow heron_srv.py >$@
 
 coverage: htmlcov/index.html
 	$(XDG_OPEN) htmlcov/index.html
