- carry sponsorship/data_use choice to REDCap (#760, 726) - thorough info logging for user actions etc. - pep8 fixes: whitespace, exception style, ...

--- a/development.ini
+++ b/development.ini
@@ -59,12 +59,14 @@ level = INFO
 handlers = console
 
 [logger_heron_wsgi]
-level = DEBUG
+level = INFO
+#level = DEBUG
 handlers =
 qualname = heron_wsgi
 
 [logger_sqlalchemy]
-level = INFO
+level = WARN
+#level = INFO
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
