--- a/apache/heron_admin.conf
+++ b/apache/heron_admin.conf
@@ -13,8 +13,9 @@ WSGIScriptAlias /heron /usr/local/heron_admin/apache/heron_wsgi.py
 #Test if modwsgi is working. Uncomment below line, and go to http://localhost/test:
 WSGIScriptAlias /test /usr/local/heron_admin/apache/test.wsgi
 
-Redirect /heron_admin /heron/
-RedirectMatch /heron$ /heron/
+# see heron-ssl.conf
+Redirect /heron_admin https://heron.kumc.edu/heron/
+RedirectMatch /heron$ https://heron.kumc.edu/heron/
 
 #Directory Permission.
 <Directory /usr/local/heron_admin/apache>
