oops; forgot to document executives setting in enterprise_directory section  in a274f1d38c50
--HG--
branch : ocap_sc

--- a/heron_wsgi/admin_lib/integration-test.ini.example
+++ b/heron_wsgi/admin_lib/integration-test.ini.example
@@ -5,6 +5,7 @@ url= ldaps://...
 userDn= ...
 password= ...
 base=...
+executives=...
 
 [chalk]
 # one way to get this working is to run an ssh tunnel
