ignore flymake stuff

--- a/.hgignore
+++ b/.hgignore
@@ -10,6 +10,8 @@ catalog.xml
 
 .ropeproject
 
+*_flymake.*
+
 # passwords and such for integration testing
 heron_wsgi/integration-test.ini
 heron_wsgi/admin_lib/integration-test.ini
