toward remote cache with independent host security   - use environment to get sqlalchemy URL for PII DB   - represent enough of CRS DB for sqlalchemy to do bind vars   - use sqlalchemy row proxies rather than building named tuples

--- a/heron_wsgi/traincheck/requirements.txt
+++ b/heron_wsgi/traincheck/requirements.txt
@@ -20,3 +20,6 @@ PySimpleSOAP==1.10
 #
 # but we seem to need unicode unmarshalling:
 # https://github.com/pysimplesoap/pysimplesoap/commit/28f691b34a08499b7395d962b1b130ed4425be56
+
+sqlalchemy
+PyMySQL
