add enterprise_directory.certfile config param (#653)
so that we don't have to skip certificate checking

--HG--
branch : ldap_cert_653

--- a/heron_wsgi/admin_lib/integration-test.ini.example
+++ b/heron_wsgi/admin_lib/integration-test.ini.example
@@ -2,6 +2,7 @@
 # (Ask around for the various passwords etc.)
 [enterprise_directory]
 url= ldaps://...
+certfile=LDAP_HOST_CERT.pem
 userDn= ...
 password= ...
 base=...
