Use PyMySQL in Jenkins job, added back in for production.
--HG--
branch : citi_2760

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,7 @@ zope.interface==4.0.3
 
 docopt
 PySimpleSOAP==1.10
+# Redundant MySQL drive alongside MySQL-python (look at replacing code that 
+# uses MySQL-python).
+PyMySQL
+
