When building a team, look up study team by IRB number (adding is TODO)
  - add study team table to /build_team pages
    - in TeamBuilder, ask browser.studyTeam() based on URL params
    - add studylookupaddr config option in enterprise_directory section
    - add Browser.studyTeam(studyId)
      - add lookup function to Browser() constructor
        - build lookup function in RunTime config

--HG--
branch : studyTeam_3502

--- a/heron_wsgi/admin_lib/integration-test.ini.example
+++ b/heron_wsgi/admin_lib/integration-test.ini.example
@@ -7,6 +7,7 @@ userDn= ...
 password= ...
 base=...
 executives=...
+studylookupaddr=http://...
 
 [chalk]
 # leave this section here for transition.
