--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@
 
 plugins {
   id 'java'
+  id 'war'
+  id 'org.akhikhl.gretty' version '1.4.2'
   id "com.github.hierynomus.jython" version "0.8.0"
 }
 
