--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ dependencies {
   // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
   compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
 
+  jython python(":SQLAlchemy:0.7.2") {
+    moduleName = "sqlalchemy"
+    copy {
+      // within SQLAlchemy-0.7.2.tar.gz
+      from "lib/sqlalchemy"
+    }
+  }
+
   jython python(":JayDeBeApi:1.1.1") {
     moduleName = "jaydebeapi"
     copy {
@@ -32,9 +40,6 @@ repositories {
 task testSqliteJdbc(type: JavaExec) {
   group = 'verification'
   classpath = sourceSets.main.runtimeClasspath
-
-  // to get sqlalchemy
-  environment 'JYTHONPATH', "${environment.VIRTUAL_ENV}/Lib/site-packages"
 
   workingDir 'heron_wsgi/admin_lib'
   main = 'org.python.util.jython'
