--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
   // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
   compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
 
+  testJython ":nose:1.3.7"
+
   jython python(":SQLAlchemy:0.7.2") {
     moduleName = "sqlalchemy"
     copy {
@@ -36,6 +38,16 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+task noseTests(type: JavaExec) {
+  group = 'verification'
+  classpath = sourceSets.test.runtimeClasspath
+
+  workingDir 'heron_wsgi/admin_lib'
+  main = 'org.python.util.jython'
+  args "${buildDir}/resources/test/nose/__main__.py", '--with-doctest'
+}
+check.dependsOn noseTests
 
 task testSqliteJdbc(type: JavaExec) {
   group = 'verification'
