--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,74 @@ dependencies {
 
   testJython ":nose:1.3.7"
 
+  jython ":genshi:0.6"
+
+  jython python(":setuptools:6.0.1") {
+    // 6.0.1 was current as of Sep 17, 2014
+    useModuleName = false
+    copy {
+      from "pkg_resources.py"
+    }
+  }
+  
+  jython python(":injector:0.5.2") {
+    useModuleName = false
+    copy {
+      from "injector.py"
+    }
+  }
+
+  jython python(":py-dom-xpath-redux:0.1.1") {
+    moduleName = "xpath"
+  }
+
+  jython ":pyramid_mailer:0.10"
+  // grumble... no automatic transitive dependencies
+  jython ":pyramid:1.2.1"
+  jython ":Chameleon:3.2"
+  jython python(":Mako:1.0.7") {
+    moduleName = "mako"
+  }
+  jython ":MarkupSafe:1.0"
+  jython ":Paste:2.0.3"
+  jython ":PasteDeploy:1.5.2"
+  jython ":PasteScript:2.0.2"
+  jython python(":WebOb:1.8.1") {
+    moduleName = "webob"
+    copy {
+      from "src/webob"
+    }
+  }
+  jython python(":repoze.lru:0.7") {
+    moduleName = "repoze"
+  }
+  jython python(":repoze.sendmail:3.2") {
+    moduleName = "repoze"
+  }
+  jython ":transaction:1.4.3"
+  jython ":six:1.11.0"
+  jython ":translationstring:1.3"
+  jython ":venusian:1.1.0"
+  jython python(":zope.component:4.4.1") {
+    moduleName = "zope"
+    copy {
+      from "src/zope"
+    }
+  }
+  jython python(":zope.deprecation:4.3.0") {
+    moduleName = "zope"
+    copy {
+      from "src/zope"
+    }
+  }
+  jython ":zope.event:4.3.0"
+  jython python(":zope.interface:4.5.0") {
+    moduleName = "zope"
+    copy {
+      from "src/zope"
+    }
+  }
+
   jython python(":SQLAlchemy:0.7.2") {
     moduleName = "sqlalchemy"
     copy {
