rundoctests for jython and python: all but i2b2pm (WIP)
Aside from i2b2pm, all doctests are working under both jython (gradle)
and python.

  - toward ocap config, injection
  - ocap_file.Path: use kwargs
  - avoid late-bound imports, which jython doesn't seem to grok
  - use rtconfig._printLogs() uniformly
  - refactor i2b2pm.RunTime.jboss_context for use in i2b2metdata.py
    - jndi_util: use pathlib

--HG--
branch : jvm_deploy_254

--- a/build.gradle
+++ b/build.gradle
@@ -107,15 +107,15 @@ repositories {
     mavenCentral()
 }
 
-task noseTests(type: JavaExec) {
-  group = 'verification'
-  classpath = sourceSets.test.runtimeClasspath
+task doctests(type: JavaExec) {
+  classpath = sourceSets.main.runtimeClasspath
 
-  workingDir 'heron_wsgi/admin_lib'
   main = 'org.python.util.jython'
-  args "${buildDir}/resources/test/nose/__main__.py", '--with-doctest'
+  environment PYTHONPATH: '.:heron_wsgi:heron_wsgi/admin_lib'
+  args 'rundoctests.py'
 }
-check.dependsOn noseTests
+check.dependsOn doctests
+
 
 task testSqliteJdbc(type: JavaExec) {
   group = 'verification'
