server:main use waitress following recent pylons docs
  - add waitress dependency
  - update deps: cx-oracle, pyasn1-modules

--HG--
branch : jvm_deploy_254

--- a/development.ini
+++ b/development.ini
@@ -1,15 +1,10 @@
-#!/usr/bin/env paster
+#!/usr/bin/env pserve
 #
-# Make sure you run `python setup.py develop` before you try to run this.
+# Pylons__ development config.
 #
-# cf http://pythonpaste.org/deploy/
-# http://pythonpaste.org/script/
-
-[exe]
-command = serve
-#daemon = true
-#user = nobody
-#group = nobody
+# Make sure you run `pip install -e .` before you try to run this.
+#
+# __ https://docs.pylonsproject.org/projects/pyramid/en/1.10-branch/quick_tour.html
 
 [composite:main]
 use = egg:Paste#urlmap
@@ -39,9 +34,9 @@ document_root = heron_wsgi/templates/av/
 # todo: pyramid_debugtoolbar
 
 [server:main]
-use = egg:Paste#http
-host = 127.0.0.1
-port = 8123
+use = egg:waitress#main
+# listen = localhost:6543
+listen = %(http_listen)s
 
 # Begin logging configuration
 
