--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 -i https://pypi.org/simple
-cx-oracle==7.1.2
+cx-oracle==7.1.3
 docopt==0.6.2
 genshi==0.7.1
 hupper==1.6.1
@@ -9,7 +9,7 @@ pastedeploy==2.0.1
 pastescript==1.7.5
 plaster-pastedeploy==0.7
 plaster==1.0
-pyasn1-modules==0.2.4
+pyasn1-modules==0.2.5
 pyasn1==0.4.5
 pymysql==0.9.3
 pyramid-mailer==0.15.1
@@ -24,6 +24,7 @@ transaction==2.4.0
 translationstring==1.3
 typing==3.6.6
 venusian==1.2.0
+waitress==1.3.0
 webob==1.8.5
 zope.deprecation==4.4.0
 zope.interface==4.6.0
