--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ pyramid-mailer==0.15.1
 python-ldap==3.2.0
 # pyasn1-0.4.5 pyasn1-modules-0.2.4 python-ldap-3.2.0
 
+pathlib==1.0.1
+
 docopt==0.6.2
 PySimpleSOAP==1.16.2
 
