leave cx-Oracle, python-ldap out of requirements.txt
manage them with conda / ansible

--HG--
branch : jvm_deploy_254

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 # see README.rst, setup.py
+
+# non-pure-python dependencies are managed with ansible
+# cx-Oracle==7.1.2
+# python-ldap==3.2.0
+
 Genshi==0.6
 Paste==1.7.5.1
 PasteDeploy==2.0.1
 PasteScript==1.7.5
 SQLAlchemy==1.2.18
-cx-Oracle==7.1.2
 injector==0.12.0
 # typing-3.6.6
 pyramid==1.10.2
@@ -13,7 +17,6 @@ pyramid==1.10.2
 # webob-1.8.5 zope.deprecation-4.4.0 zope.interface-4.6.0
 pyramid-mailer==0.15.1
 # pyramid-mailer-0.15.1 repoze.sendmail-4.4.1 transaction-2.4.0
-python-ldap==3.2.0
 # pyasn1-0.4.5 pyasn1-modules-0.2.4 python-ldap-3.2.0
 
 docopt==0.6.2
