--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,29 @@
-# see README.rst, setup.py
-
-# non-pure-python dependencies are managed with ansible
-# cx-Oracle==7.1.2
-# python-ldap==3.2.0
-
-Genshi==0.6
-Paste==1.7.5.1
-PasteDeploy==2.0.1
-PasteScript==1.7.5
-SQLAlchemy==1.2.18
-injector==0.12.0
-# typing-3.6.6
-pyramid==1.10.2
-# PasteDeploy-2.0.1 hupper-1.6.1 plaster-1.0 plaster-pastedeploy-0.6
-# pyramid-1.10.2 repoze.lru-0.7 translationstring-1.3 venusian-1.2.0
-# webob-1.8.5 zope.deprecation-4.4.0 zope.interface-4.6.0
-pyramid-mailer==0.15.1
-# pyramid-mailer-0.15.1 repoze.sendmail-4.4.1 transaction-2.4.0
-# pyasn1-0.4.5 pyasn1-modules-0.2.4 python-ldap-3.2.0
-
+-i https://pypi.org/simple
+#cx-oracle==7.1.2
 docopt==0.6.2
-PySimpleSOAP==1.16.2
-
-PyMySQL==0.9.3
+genshi==0.7.1
+hupper==1.6.1
+injector==0.12.0
+paste==3.0.8
+pastedeploy==2.0.1
+pastescript==1.7.5
+plaster-pastedeploy==0.6
+plaster==1.0
+pyasn1-modules==0.2.4
+pyasn1==0.4.5
+pymysql==0.9.3
+pyramid-mailer==0.15.1
+pyramid==1.10.2
+pysimplesoap==1.16.2
+#python-ldap==3.2.0
+repoze.lru==0.7 ; python_version < '3.2'
+repoze.sendmail==4.4.1
+six==1.12.0
+sqlalchemy==1.2.18
+transaction==2.4.0
+translationstring==1.3
+typing==3.6.6
+venusian==1.2.0
+webob==1.8.5
+zope.deprecation==4.4.0
+zope.interface==4.6.0
