tox: nosetests, flake8 OK
  - fix unstable tests
    - kludge: use PYTHONHASHSEED for unstable dict tests (disclaimer.py)
    - use ELLIPSIS for random record id (disclaimer.py)
    - stabilize set() test with sorted() (i2b2pm)
  - flake8 lint fixes
    - unused imports (redcap_projects)
    - broken type annotations (redcap_invite)
      - Pipfile: add typing
    - noqa for long URL, `it` abuse in rtconfig, bare except in sealing
    - pep8 whitespace (e.g. comment start)
  - Pipfile: downgrade SQLAlchemy to 1.2.15, latest in conda
  - ignore .tox (and mypy cache)

--HG--
branch : jvm_deploy_254

--- a/Pipfile
+++ b/Pipfile
@@ -19,11 +19,12 @@ Paste = "*"
 PasteDeploy = "==2.0.1"
 PasteScript = "==1.7.5"
 # stay on stable
-SQLAlchemy = "==1.2.18"
+SQLAlchemy = "==1.2.15"
 cx-Oracle = "*"
 pyramid_mailer = "*"
 PySimpleSOAP = "*"
 PyMySQL = "*"
+typing = "*"
 
 [requires]
 python_version = "2.7"
