--- a/tox.ini
+++ b/tox.ini
@@ -9,16 +9,30 @@ envlist = py27
 skipsdist=True
 
 [testenv]
+setenv =
+    # ISSUE: doctests with dicts are fragile
+    PYTHONHASHSEED = 100
+    # ISSUE: help stats.py find genshi_render.py
+    PYTHONPATH = {toxinidir}/heron_wsgi
+
 commands =
     # ISSUE: heron_srv doctests are failing with:
     # AppError: Bad response: 303 See Other (not 200)
     # nosetests --with-doctest
+    # So we run them separately:
     nosetests --with-doctest heron_wsgi/admin_lib
+
+    # $ ls -1 heron_wsgi/*.py | while read py; do echo "    python -m doctest $py"; done
+    python -m doctest heron_wsgi/__init__.py
+    python -m doctest heron_wsgi/cas_auth.py
+    python -m doctest heron_wsgi/drocnotice.py
+    python -m doctest heron_wsgi/genshi_render.py
+    python -m doctest heron_wsgi/heron_srv.py
+    python -m doctest heron_wsgi/perf_reports.py
+    python -m doctest heron_wsgi/stats.py
+
     flake8 heron_wsgi
 
 whitelist_externals =
     # I'm not sure what is invoking this
-    /usr/bin/python
-
-# ISSUE: doctests with dicts are fragile
-setenv = PYTHONHASHSEED = 100
+    python
