--- a/build.gradle
+++ b/build.gradle
@@ -19,39 +19,31 @@ dependencies {
 
   testJython ":nose:1.3.7"
 
-  jython ":genshi:0.6"
+  jython ":genshi:0.7.1"
 
   jython python(":setuptools:6.0.1") {
     // 6.0.1 was current as of Sep 17, 2014
-    useModuleName = false
+    useModuleName = false // copy to root, not to setuptools/
+    // https://github.com/hierynomus/jython-gradle-plugin
     copy {
       from "pkg_resources.py"
     }
   }
   
-  jython python(":injector:0.5.2") {
+  jython python(":injector:0.12.0") {
     useModuleName = false
     copy {
       from "injector.py"
     }
   }
 
-  jython python(":py-dom-xpath-redux:0.1.1") {
-    moduleName = "xpath"
-  }
-
-  jython ":pyramid_mailer:0.10"
+  jython ":pyramid_mailer:0.15.1"
   // grumble... no automatic transitive dependencies
-  jython ":pyramid:1.2.1"
-  jython ":Chameleon:3.2"
-  jython python(":Mako:1.0.7") {
-    moduleName = "mako"
-  }
-  jython ":MarkupSafe:1.0"
-  jython ":Paste:2.0.3"
-  jython ":PasteDeploy:1.5.2"
-  jython ":PasteScript:2.0.2"
-  jython python(":WebOb:1.8.1") {
+  jython ":pyramid:1.10.4"
+  jython ":Paste:3.0.8"
+  jython ":PasteDeploy:2.0.1"
+  jython ":PasteScript:1.7.5"
+  jython python(":WebOb:1.8.5") {
     moduleName = "webob"
     copy {
       from "src/webob"
@@ -60,26 +52,25 @@ dependencies {
   jython python(":repoze.lru:0.7") {
     moduleName = "repoze"
   }
-  jython python(":repoze.sendmail:3.2") {
+  jython python(":repoze.sendmail:4.4.1") {
     moduleName = "repoze"
   }
-  jython ":transaction:1.4.3"
-  jython ":six:1.11.0"
+  jython ":transaction:2.4.0"
+  jython ":six:1.12.0"
   jython ":translationstring:1.3"
-  jython ":venusian:1.1.0"
-  jython python(":zope.component:4.4.1") {
+  jython ":venusian:1.2.0"
+  jython python(":typing:3.6.6") {
+    useModuleName = false
+    copy {
+      from "python2/typing.py"
+    }
+  }
+  jython python(":zope.deprecation:4.4.0") {
     moduleName = "zope"
     copy {
       from "src/zope"
     }
   }
-  jython python(":zope.deprecation:4.3.0") {
-    moduleName = "zope"
-    copy {
-      from "src/zope"
-    }
-  }
-  jython ":zope.event:4.3.0"
   jython python(":zope.interface:4.5.0") {
     moduleName = "zope"
     copy {
@@ -87,7 +78,7 @@ dependencies {
     }
   }
 
-  jython python(":SQLAlchemy:0.7.2") {
+  jython python(":SQLAlchemy:1.2.15") {
     moduleName = "sqlalchemy"
     copy {
       // within SQLAlchemy-0.7.2.tar.gz
