revisit setup.py vs Pipenv based on Pyramid norms (WIP)
 - add Usage to README.rst: pserve development.ini
   - restore setup.py for sdist
     - add ocaps design note
 - try building an rpm from the virtualenv
   - ignore .env
   - keep extensions (ldap, cx_oracle) in requirements.txt
   - add prmvenv, tox to Pipfile dev tools

--HG--
branch : jvm_deploy_254

--- a/devdoc/Makefile
+++ b/devdoc/Makefile
@@ -167,4 +167,5 @@ mod_deps:
 # cx-Oracle==7.1.2
 # python-ldap==3.2.0
 ../requirements.txt: ../Pipfile ../Pipfile.lock
-	pipenv lock --requirements | sed -E -e '/(oracle)|(ldap)/I s/^/#/' >$@
+	# pipenv lock --requirements | sed -E -e '/(oracle)|(ldap)/I s/^/#/' >$@
+	pipenv lock --requirements >$@
