--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,6 @@
 [tox]
 envlist = py27
 
-# We use Pipfile rather than setup.py.
-skipsdist=True
-
 [testenv]
 setenv =
     # ISSUE: doctests with dicts are fragile
@@ -20,7 +17,7 @@ commands =
     # AppError: Bad response: 303 See Other (not 200)
     # nosetests --with-doctest
     # So we run them separately:
-    nosetests --with-doctest heron_wsgi/admin_lib
+    pipenv run nosetests --with-doctest heron_wsgi/admin_lib
 
     # $ ls -1 heron_wsgi/*.py | while read py; do echo "    python -m doctest $py"; done
     python -m doctest heron_wsgi/__init__.py
@@ -31,8 +28,17 @@ commands =
     python -m doctest heron_wsgi/perf_reports.py
     python -m doctest heron_wsgi/stats.py
 
-    flake8 heron_wsgi
+    # see setup.cfg for coding style info
+    pipenv run flake8 heron_wsgi
+
+    # Detection of Security Vulnerabilities
+    # https://pipenv.readthedocs.io/en/latest/advanced/#detection-of-security-vulnerabilities
+    pipenv check
+
+    # like $(rm -f dist/*.rpm) but without relying on shell for glob expansion
+    pipenv run python setup.py sdist
+    pipenv run python -c 'import glob; import os; [os.unlink(pkg) for pkg in glob.glob("dist/*.rpm")]'
+    pipenv run rpmvenv rpmvenv.json --destination dist
 
 whitelist_externals =
-    # I'm not sure what is invoking this
-    python
+    pipenv
