use url_prefix=/heron/ to get links right
--HG--
branch : jvm_deploy_254

--- a/development.ini
+++ b/development.ini
@@ -37,6 +37,7 @@ document_root = heron_wsgi/templates/av/
 use = egg:waitress#main
 # listen = localhost:6543
 listen = %(http_listen)s
+url_prefix=/heron/
 
 # Begin logging configuration
 
