--- a/production.ini.example
+++ b/production.ini.example
@@ -146,6 +146,7 @@ api_url=https://redcap.kumc.edu/api/
 use = egg:waitress#main
 # listen = *:6543
 listen = %(http_listen)s
+url_prefix=/heron/
 
 
 ###
