only generate oversight survey code when request_from_faculty=1
   - redcap_connect: support un-authenticated surveys

Since `faculty_email` is designated as the survey participant field,
it was getting clobbered based on the survey code generated for the
requestor.

--- a/production.ini.example
+++ b/production.ini.example
@@ -109,7 +109,8 @@ survey_id=2678
 
 [oversight_survey]
 api_url=https://redcap.kumc.edu/api/
-survey_url=https://redcap.kumc.edu/surveys/
+# ISSUE: oversight_survey production survey code
+survey_url=https://redcap.kumc.edu/surveys/?s=MAXXNXYD8W
 domain=kumc.edu
 survey_id=94
 project_id=238
