parameterize identified_data

--- a/production.ini.example
+++ b/production.ini.example
@@ -123,7 +123,7 @@ level=WARN
 #jboss_deploy=/opt/jboss-as-7.1.1.Final/standalone/deployments/
 # ISSUE: provide sqlalchemy URL instead?
 jboss_deploy=CFG_JBOSS_DATASOURCES
-identified_data=false
+identified_data=CFG_ID
 
 [i2b2md]
 #jboss_deploy=/opt/jboss-as-7.1.1.Final/standalone/deployments/
