--- a/production.ini.example
+++ b/production.ini.example
@@ -109,7 +109,7 @@ survey_id=2678
 
 [oversight_survey]
 api_url=https://redcap.kumc.edu/api/
-survey_url=https://redcap.kumc.edu/surveys/?s=rRYkiH
+survey_url=CFG_REDCAP_OVERSIGHT_SURVEY
 domain=kumc.edu
 survey_id=94
 project_id=238
