--- a/production.ini.example
+++ b/production.ini.example
@@ -111,8 +111,8 @@ survey_id=2678
 api_url=https://redcap.kumc.edu/api/
 survey_url=CFG_REDCAP_OVERSIGHT_SURVEY_URL
 domain=kumc.edu
-survey_id=94
-project_id=238
+survey_id=CFG_REDCAP_OVERSIGHT_SURVEY_ID
+project_id=CFG_REDCAP_OVERSIGHT_PROJECT_ID
 trigger_log=/tmp/oversight_log_dir/
 trigger_url=http://db-proxy-sable/dummy
 level=WARN
