--- a/production.ini.example
+++ b/production.ini.example
@@ -124,6 +124,7 @@ level=WARN
 jboss_deploy=CFG_JBOSS_DATASOURCES
 identified_data=CFG_ID
 i2b2pm_schema=CFG_I2B2PM_SCHEMA
+i2b2crc_schema=CFG_I2B2CRC_SCHEMA
 
 [i2b2md]
 #jboss_deploy=/opt/jboss-as-7.1.1.Final/standalone/deployments/
