set missing dev pserve url

--- a/development.ini
+++ b/development.ini
@@ -35,8 +35,7 @@ document_root = heron_wsgi/templates/av/
 
 [server:main]
 use = egg:waitress#main
-# listen = localhost:6543
-listen = %(http_listen)s
+listen = 127.0.0.1:8080
 url_prefix=/heron/
 
 # Begin logging configuration
