source single i2b2 connect url

--- a/production.ini.example
+++ b/production.ini.example
@@ -122,11 +122,11 @@ level=WARN
 identified_data=CFG_ID
 i2b2pm_schema=CFG_I2B2PM_SCHEMA
 i2b2crc_schema=CFG_I2B2CRC_SCHEMA
-i2b2pm_url=CFG_I2B2PM_URL
+i2b2pm_url=CFG_I2B2_URL
 
 [i2b2md]
 i2b2meta_schema=CFG_I2B2META_SCHEMA
-i2b2meta_url=CFG_I2B2META_URL
+i2b2meta_url=CFG_I2B2_URL
 
 [disclaimers]
 project_id=398
