--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pastedeploy==2.0.1
 pastescript==1.7.5
 plaster-pastedeploy==0.7
 plaster==1.0
+psycopg2
 pyasn1-modules==0.2.8
 pyasn1==0.4.8
 pymysql==0.10.0
